--- a/roles/opensearch/templates/opensearch.yml.j2
+++ b/roles/opensearch/templates/opensearch.yml.j2
@@ -3,5 +3,5 @@ node.name: opensearch-node-1
 network.host: 0.0.0.0
 http.port: 9200
 discovery.type: single-node
-path. /var/lib/opensearch
+path.data: /var/lib/opensearch
 path.logs: /var/log/opensearch
